# tpcve

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  analyze.py  analyze_correlation.py  analyze_correlation_alpha.py  analyze_correlation_chm.py  analyze_correlation_count.py  analyze_correlation_percentile.py  batch.py  batch_alpha.py  batch_chm.py  batch_count.py  batch_percentile.py  batch_process.py  cloud_pipeline.py  downsample_alpha_compare.py  downsample_compare.py  generate_cloud.py  geometry.py  inspect_cloud.py  main.py  occlusion_experiment.py  predict_biomass.py  pyproject.toml  visualize_methods.py  volume_methods.py  voxel_size_sweep.py
.github/workflows/: build-predict.yml
core/: __init__.py  args.py  long_analyze.py  long_batch.py
data/Livox/: settings.env
data/Yanco-1-1-1-b/: settings.env
experiments/: downsample_alpha_compare.py  downsample_compare.py
methods/: __init__.py  _common.py  alpha.py  chm.py  count.py  percentile.py  voxel.py
notebooks/: kaggle_run.ipynb
scripts/: inspect_cloud.py  plot_summary.py  predict_biomass.py  process_data.sh  visualize_methods.py
tests/: test_readers.py
tools/: autoname.py  freeze_model.py  optimize_r2.py  regression.py
tpcve/: __init__.py
tpcve/cloud/: __init__.py  cloud_pipeline.py  generate_cloud.py  geometry.py  volume_methods.py
tpcve/core/: __init__.py  args.py  io.py  long_batch.py
tpcve/methods/: __init__.py  alpha.py  chm.py  count.py  percentile.py  voxel.py
