[project]
name = "tls-volume-estimation"
version = "0.2.0"
description = "TLS point cloud volume estimation methods"
readme = "README.md"
license = "MIT"
authors = [{ name = "Konabur (Shaikhiev D.)", email = "shaikhiev2014@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "alphashape>=1.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "rosbags>=0.11.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "pandas>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tpcve", "tools"]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pyinstaller>=6.21.0",
    "pytest>=9.1.1",
]

extra = [
    "laspy>=2.5.4",
    "open3d>=0.19.0",
    "optuna>=4.8.0",
    "plotly>=6.0.0",
]
